; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_GetDaysUntil2038.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_GetDaysUntil2038.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetDaysUntil2038() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = call i64 (...) @SystemTime64()
  store i64 %5, i64* %2, align 8
  %6 = call i32 @Zero(%struct.TYPE_4__* %4, i32 12)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store i32 2038, i32* %7, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i32 1, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  store i32 1, i32* %9, align 4
  %10 = call i64 @SystemToUINT64(%struct.TYPE_4__* %4)
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* %3, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %21

15:                                               ; preds = %0
  %16 = load i64, i64* %3, align 8
  %17 = load i64, i64* %2, align 8
  %18 = sub nsw i64 %16, %17
  %19 = sdiv i64 %18, 86400000
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %15, %14
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i64 @SystemTime64(...) #1

declare dso_local i32 @Zero(%struct.TYPE_4__*, i32) #1

declare dso_local i64 @SystemToUINT64(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
